--- a/README
+++ b/README
@@ -34,4 +34,5 @@ Custom settings:
 -b: toggle the bar.
 -f <font description>: modify the font.
 -c <password characters>: modify the characters displayed when the user enters his password. This can be a sequence of characters to create a fake password.
+-u <username>: allow <username> to login
 
